Fix overflow caused by incorrect size of NavigationBar

--- a/source/index.css
+++ b/source/index.css
@@ -2,5 +2,4 @@ html,
 body {
     margin: 0px !important;
     padding: 0px !important;
-    overflow: hidden;
 }
